# LifeXP

./: README.md  index.html  mortality_report.html  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
info/: lifeXP_build_plan.html
lifexp/: __init__.py  cli.py
lifexp/core/: __init__.py  audit.py  credibility.py  data_model.py  date_utils.py  exposure.py  segmentation.py  study_period.py  tables.py
lifexp/datasets/: __init__.py  a_1967_70.csv
lifexp/expense/: __init__.py  commission.py  study.py
lifexp/graduation/: __init__.py  diagnostics.py  parametric.py  splines.py  whittaker.py  whittaker_2d.py
lifexp/lapse/: __init__.py  study.py
lifexp/morbidity/: __init__.py  multistate.py  study.py
lifexp/mortality/: __init__.py  projection.py  study.py
lifexp/reinsurance/: __init__.py  study.py
lifexp/reporting/: __init__.py  charts.py  excel_report.py  html_report.py
reports/: checkpoint_s18.html  checkpoint_s18.xlsx
results/: mortality.html  mortality.xlsx  mortality_audit.json
tests/: test_cli.py  test_e2e.py  test_smoke.py
tests/core/: test_audit.py  test_credibility.py  test_data_model.py  test_date_utils.py  test_exposure.py  test_tables.py
tests/expense/: test_study.py
tests/fixtures/: generate_portfolio.py
tests/graduation/: test_2d.py  test_whittaker.py
tests/lapse/: test_study.py
tests/morbidity/: test_dual_etr.py  test_multistate.py  test_study.py
tests/mortality/: test_projection.py  test_study.py
tests/reinsurance/: test_study.py
tests/reporting/: test_charts.py  test_html.py
